--- a/acquire_exercises.ipynb
+++ b/acquire_exercises.ipynb
@@ -982,7 +982,8 @@
    "id": "9538b9b7",
    "metadata": {},
    "source": [
-    "<b> Found in ```acquire.py```</b>"
+    "<b> Found in ```acquire.py```</b>\n",
+    "https://github.com/CodeupClassroom/noether-time-series-exercises/blob/main/acquire.py"
    ]
   },
   {
